crates/turborepo-run-opts/src/snapshots/turborepo_run_opts__test__force_remote_r,local_r.snap
---
source: crates/turborepo-run-opts/src/lib.rs
expression: cache_config
---
Ok(
    CacheConfig {
        local: CacheActions {
            read: false,
            write: false,
        },
        remote: CacheActions {
            read: false,
            write: false,
        },
    },
)
