crates/turborepo-run-opts/src/snapshots/turborepo_run_opts__test__no-cache.snap
---
source: crates/turborepo-run-opts/src/lib.rs
expression: cache_config
---
Ok(
    CacheConfig {
        local: CacheActions {
            read: true,
            write: false,
        },
        remote: CacheActions {
            read: true,
            write: false,
        },
    },
)
