crates/turborepo-run-opts/src/snapshots/turborepo_run_opts__test__turbo_watch_build.snap
---
source: crates/turborepo-run-opts/src/lib.rs
expression: "json!({\n    \"tasks\": opts.run_opts.tasks, \"filter_patterns\":\n    opts.scope_opts.filter_patterns\n})"
---
{
  "tasks": [
    "build"
  ],
  "filter_patterns": []
}
